--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1148,7 +1148,7 @@ circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5);
 <p><span><img alt="" height="267" src="/images/roc_flag_in_gd.png" width="400"/></span></p>
 <p><span>cd downloads</span><br/><span>cc<span> roc_list_coord_flag</span></span><span>.c</span><span><span> </span>-lgd -lm</span><br/><span>./a.out</span></p>
 <h1>ANSIC</h1>
-<h4>姓名、出生日期和手機號碼</h4>
+<h2>1.姓名、出生日期和手機號碼</h2>
 <div>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 
@@ -1168,7 +1168,8 @@ int main()
 }</pre>
 </div>
 <p><img alt="" height="115" src="/images/螢幕擷取畫面 2023-12-28 020026.png" width="266"/></p>
-<p><span>寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</span></p>
+<p></p>
+<h2><span>2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</span></h2>
 <div>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt; 
 
@@ -1198,7 +1199,8 @@ int main() {
 }</pre>
 </div>
 <div><img alt="" height="100" src="/images/2.png" width="396"/></div>
-<div>反轉數字</div>
+<div></div>
+<h2>3.反轉數字</h2>
 <div>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 
@@ -1228,7 +1230,8 @@ int main(void)
 }</pre>
 <span></span></div>
 <div><span><img alt="" height="98" src="/images/3.png" width="370"/></span></div>
-<div><span>日期轉換為年、週和日</span></div>
+<div><span></span></div>
+<h2><span>4.日期轉換為年、週和日</span></h2>
 <div>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 
@@ -1252,7 +1255,7 @@ int main()
 }</pre>
 <span><img alt="" height="110" src="/images/4.png" width="290"/></span></div>
 <div><span></span></div>
-<p>總和</p>
+<h2>5.總和</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;
 
 // 宣告函式原型
@@ -1293,9 +1296,9 @@ int sumOfRange(int n1)
    return (res);
 }</pre>
 <p></p>
-<p></p>
 <p><img alt="" height="231" src="/images/5.png" width="572"/></p>
-<p>列出前60個自然數</p>
+<p></p>
+<h2>6.列出前60個自然數</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;
 int  numPrint(int);
 int main()
@@ -1317,7 +1320,8 @@ int numPrint(int n)
     }
 }</pre>
 <p><img alt="" height="128" src="/images/6.png" width="400"/></p>
-<p>輸入年份產生日曆</p>
+<p></p>
+<h2>7.輸入年份產生日曆</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
@@ -1469,7 +1473,8 @@ int main(int c, char **v)
 <p><img alt="" height="473" src="/images/7-1.png" width="400"/></p>
 <p><img alt="" height="368" src="/images/7-2.png" width="400"/></p>
 <p><img alt="" height="329" src="/images/7-3.png" width="400"/></p>
-<p>猜數字</p>
+<p></p>
+<h2>8.猜數字</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include&lt;stdio.h&gt;     // 包括標準輸入/輸出頭檔。
 #include&lt;stdlib.h&gt;    // 包含標準庫頭檔。
 #include&lt;time.h&gt;      // 包含用於產生隨機數的時間頭檔。
@@ -1494,7 +1499,8 @@ printf ("That is correct!\n\n");   // 列印一條訊息，表示用戶猜對了
 return 0;   // 返回0表示程式執行成功。
 }   // 主函數結束。</pre>
 <p><img alt="" height="139" src="/images/8.png" width="400"/></p>
-<p>判斷三角形</p>
+<p></p>
+<h2>9.判斷三角形</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt; // 包含標準輸入/輸出的標頭文件。
 
 int main()
@@ -1523,7 +1529,8 @@ printf("這是一個不等邊三角形。\n"); // 印出不等邊三角形的訊
 return 0;
 }</pre>
 <p><img alt="" height="115" src="/images/9.png" width="400"/></p>
-<p><span>檢查一個數字是否為質數</span></p>
+<p></p>
+<h2>10.檢查一個數字是否為質數</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 
 // 函式原型：檢查一個數字是否為質數
@@ -1569,6 +1576,7 @@ int PrimeOrNot(int n1)
 }
 </pre>
 <p><img alt="" height="133" src="/images/10.png" width="400"/></p>
+<p></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
