--- a/content/w15.html
+++ b/content/w15.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='1.姓名、出生日期和手機號碼.html'>1.姓名、出生日期和手機號碼</a><li><a href='2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積.html'>2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</a><li><a href='3.反轉數字.html'>3.反轉數字</a><li><a href='4.日期轉換為年、週和日.html'>4.日期轉換為年、週和日</a><li><a href='5.總和.html'>5.總和</a><li><a href='6.列出前60個自然數.html'>6.列出前60個自然數</a><li><a href='7.輸入年份產生日曆.html'>7.輸入年份產生日曆</a><li><a href='8.猜數字.html'>8.猜數字</a><li><a href='9.判斷三角形.html'>9.判斷三角形</a><li><a href='10.檢查一個數字是否為質數.html'>10.檢查一個數字是否為質數</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='c_ex.html'>c_ex</a><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='1.姓名、出生日期和手機號碼.html'>1.姓名、出生日期和手機號碼</a><li><a href='2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積.html'>2.寫出 C 程式來計算高10英吋、寬10英吋的矩形的周長和面積</a><li><a href='3.反轉數字.html'>3.反轉數字</a><li><a href='4.日期轉換為年、週和日.html'>4.日期轉換為年、週和日</a><li><a href='5.總和.html'>5.總和</a><li><a href='6.列出前60個自然數.html'>6.列出前60個自然數</a><li><a href='7.輸入年份產生日曆.html'>7.輸入年份產生日曆</a><li><a href='8.猜數字.html'>8.猜數字</a><li><a href='9.判斷三角形.html'>9.判斷三角形</a><li><a href='10.檢查一個數字是否為質數.html'>10.檢查一個數字是否為質數</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='ANSIC.html'>Next</a> >> ANSIC<br /><h1>w15</h1>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='c_ex.html'>Next</a> >> c_ex<br /><h1>w15</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
 #include &lt;math.h&gt;
@@ -292,7 +292,7 @@ circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5);
 }</pre>
 <p><span><img alt="" height="267" src="./../images/roc_flag_in_gd.png" width="400"/></span></p>
 <p><span>cd downloads</span><br/><span>cc<span> roc_list_coord_flag</span></span><span>.c</span><span><span> </span>-lgd -lm</span><br/><span>./a.out</span></p>
-<br />w13 << <a href='w13.html'>Previous</a> <a href='ANSIC.html'>Next</a> >> ANSIC</div>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='c_ex.html'>Next</a> >> c_ex</div>
         
     <!-- footer -->
       <div class="container">
